--- a/godot/.godot/editor/editor_layout.cfg
+++ b/godot/.godot/editor/editor_layout.cfg
@@ -27,11 +27,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player.tscn", "res://mob.tscn", "res://main.tscn")
+open_scenes=PackedStringArray("res://player.tscn", "res://mob.tscn", "res://main.tscn", "res://hud.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-current_scene="res://main.tscn"
+current_scene="res://mob.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
